--- a/style.css
+++ b/style.css
@@ -1,5 +1,48 @@
+body {
+    background-color: #7fffd4;
+}
+
 h1{
     text-align: center;
     color: blueviolet;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+div, h1 {
+    /* border: solid 2px red; */
+}
+
+.results,
+.outcome {
+    text-align: center;
+    font-size: 30px;
+    margin: 40px 60px;
+    font-weight: bold;
+}
+
+.results {
+    color: white;
+    background-color: #ff0000;
+    padding: 30px 10px;
+    border-radius: 15px;
+    border: solid 2px #ffffff;
+}
+
+.main-game {
+    display: flex;
+    justify-content: center;
+    gap: 90px;
+}
+
+.human,
+.computer {
+    display: flex;
+    gap: 10px;
+}
+
+button {
+    width: 90px;
+    height: 50px;
+    border-radius: 15%;
+    border: solid 3px black;
 }
